kubernetes/development.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-api-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-service
  namespace: web-api-service
  labels:
    app: web-api-service
spec:
  selector:
    matchLabels:
      app: web-api-service
  replicas: 2
  template:
    metadata:
      labels:
        app: web-api-service
    spec:
      containers:
        - name: web-api-service
          image: ghcr.io/spotify-portal-public-demo/web-api-service:master
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
  namespace: web-api-service
  labels:
    app: web-api-service
spec:
  clusterIP: None
  selector:
    app: web-api-service
  ports:
    - name: http
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-api-service
  namespace: web-api-service
  annotations:
    cert-manager.io/cluster-issuer: demo-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd
spec:
  ingressClassName: external
  rules:
  - host: web-api.demo.spotifyportal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-api-service
            port:
              number: 8080
  tls:
  - secretName: web-api-demo-cert
    hosts:
      - web-api.demo.spotifyportal.com
